# decision-driven-data-contract

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: contract_check.yml
contracts/: settings.json  user_features.yaml
dashboard/: app.py  state.py
data_contract.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
decisions/: decision_log.jsonl
engine/: actions.py  decision.py  loader.py  risk.py  validator.py
scripts/: ci_check.py  run_pipeline.py
tests/: test_contract_break.py
