[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "data-contract"
version = "0.1.0"
description = "Decision-driven data contract & monitoring system"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["engine", "dashboard", "scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
